--- a/application.json
+++ b/application.json
@@ -20,6 +20,14 @@
     {
       "id": "Page1",
       "isDefault": true
+    },
+    {
+      "id": "Sheet1",
+      "isDefault": false
+    },
+    {
+      "id": "Sheet12",
+      "isDefault": false
     }
   ],
   "unpublishedApplicationDetail": {
